menu overflow fix

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,7 @@
   scroll-behavior: smooth;
   background-color: $main-background-color;
   font-family: "Inter", sans-serif;
+
   :has(.page__menu:target) {
     overflow: hidden;
   }
@@ -22,7 +23,7 @@
     opacity: 1;
     pointer-events: all;
     transform: translateX(0);
-    overflow: hidden;
+    overflow: auto;
     z-index: 1;
   }
 
